--- a/EWT/EWT-UI/EWT-UI.csproj
+++ b/EWT/EWT-UI/EWT-UI.csproj
@@ -303,6 +303,12 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EWT-BLL\EWT-BLL.csproj">
+      <Project>{b221b7b3-e43b-400b-809e-739976a99a38}</Project>
+      <Name>EWT-BLL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
