--- a/EWT/EWT-UI/Web.config
+++ b/EWT/EWT-UI/Web.config
@@ -73,4 +73,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="EWTContext" 
+			 connectionString="server=Aorus-Xtrex\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;" 
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
