--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -53,13 +53,22 @@
   <ItemGroup>
     <Compile Include="EF\EWTContext.cs" />
     <Compile Include="EF\Models\User.cs" />
+    <Compile Include="Migrations\202308112030579_InitDB.cs" />
+    <Compile Include="Migrations\202308112030579_InitDB.designer.cs">
+      <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202308112030579_InitDB.resx">
+      <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
