--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -52,10 +52,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\EWTContext.cs" />
+    <Compile Include="EF\Models\Employee.cs" />
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.designer.cs">
       <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308120806219_InitEmployee.cs" />
+    <Compile Include="Migrations\202308120806219_InitEmployee.designer.cs">
+      <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -67,6 +72,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202308112030579_InitDB.resx">
       <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308120806219_InitEmployee.resx">
+      <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
