Create an Interface for repos

--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -54,6 +54,7 @@
     <Compile Include="EF\EWTContext.cs" />
     <Compile Include="EF\Models\Employee.cs" />
     <Compile Include="EF\Models\User.cs" />
+    <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.designer.cs">
       <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
