Create a main data access factory
- through this all layer will communicate and get data

--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccesser.cs" />
     <Compile Include="EF\EWTContext.cs" />
     <Compile Include="EF\Models\Employee.cs" />
     <Compile Include="EF\Models\User.cs" />
