--- a/EWT/EWT-BLL/EWT-BLL.csproj
+++ b/EWT/EWT-BLL/EWT-BLL.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="DTOs\EmployeeDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EmployeeService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EWT-DAL\EWT-DAL.csproj">
@@ -56,8 +57,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
