--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="DataAccesser.cs" />
     <Compile Include="EF\EWTContext.cs" />
+    <Compile Include="EF\Models\Admin.cs" />
     <Compile Include="EF\Models\Employee.cs" />
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
@@ -64,8 +65,17 @@
     <Compile Include="Migrations\202308120806219_InitEmployee.designer.cs">
       <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202308121919566_CreateTableAdmin.cs" />
+    <Compile Include="Migrations\202308121919566_CreateTableAdmin.designer.cs">
+      <DependentUpon>202308121919566_CreateTableAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308121925429_CreateTableAdminV2.cs" />
+    <Compile Include="Migrations\202308121925429_CreateTableAdminV2.designer.cs">
+      <DependentUpon>202308121925429_CreateTableAdminV2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repos\AdminRepo.cs" />
     <Compile Include="Repos\EmployeeRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
   </ItemGroup>
@@ -79,6 +89,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308120806219_InitEmployee.resx">
       <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308121919566_CreateTableAdmin.resx">
+      <DependentUpon>202308121919566_CreateTableAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308121925429_CreateTableAdminV2.resx">
+      <DependentUpon>202308121925429_CreateTableAdminV2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
