--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="EF\EWTContext.cs" />
     <Compile Include="EF\Models\Admin.cs" />
     <Compile Include="EF\Models\Employee.cs" />
+    <Compile Include="EF\Models\Ticket.cs" />
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.cs" />
@@ -73,11 +74,16 @@
     <Compile Include="Migrations\202308121925429_CreateTableAdminV2.designer.cs">
       <DependentUpon>202308121925429_CreateTableAdminV2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202308121950396_CreateTableTickets.cs" />
+    <Compile Include="Migrations\202308121950396_CreateTableTickets.designer.cs">
+      <DependentUpon>202308121950396_CreateTableTickets.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\AdminRepo.cs" />
     <Compile Include="Repos\EmployeeRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
+    <Compile Include="Repos\TicketRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308121925429_CreateTableAdminV2.resx">
       <DependentUpon>202308121925429_CreateTableAdminV2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308121950396_CreateTableTickets.resx">
+      <DependentUpon>202308121950396_CreateTableTickets.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
