--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -67,10 +67,10 @@
     <Compile Include="Migrations\202308120806219_InitEmployee.designer.cs">
       <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
     </Compile>
-
     <Compile Include="Migrations\202308121638378_InitMovie.cs" />
     <Compile Include="Migrations\202308121638378_InitMovie.designer.cs">
       <DependentUpon>202308121638378_InitMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\202308121919566_CreateTableAdmin.cs" />
     <Compile Include="Migrations\202308121919566_CreateTableAdmin.designer.cs">
       <DependentUpon>202308121919566_CreateTableAdmin.cs</DependentUpon>
@@ -82,6 +82,10 @@
     <Compile Include="Migrations\202308121950396_CreateTableTickets.cs" />
     <Compile Include="Migrations\202308121950396_CreateTableTickets.designer.cs">
       <DependentUpon>202308121950396_CreateTableTickets.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308122041435_MergeNelow.cs" />
+    <Compile Include="Migrations\202308122041435_MergeNelow.designer.cs">
+      <DependentUpon>202308122041435_MergeNelow.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -102,9 +106,9 @@
     <EmbeddedResource Include="Migrations\202308120806219_InitEmployee.resx">
       <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
     </EmbeddedResource>
-
     <EmbeddedResource Include="Migrations\202308121638378_InitMovie.resx">
       <DependentUpon>202308121638378_InitMovie.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308121919566_CreateTableAdmin.resx">
       <DependentUpon>202308121919566_CreateTableAdmin.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,8 +118,10 @@
     <EmbeddedResource Include="Migrations\202308121950396_CreateTableTickets.resx">
       <DependentUpon>202308121950396_CreateTableTickets.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308122041435_MergeNelow.resx">
+      <DependentUpon>202308122041435_MergeNelow.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
