--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -52,10 +52,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EF\EWTContext.cs" />
+    <Compile Include="EF\Models\Hall.cs" />
+    <Compile Include="EF\Models\Payment.cs" />
+    <Compile Include="EF\Models\Seat.cs" />
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.designer.cs">
       <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308122110525_addHAll.cs" />
+    <Compile Include="Migrations\202308122110525_addHAll.designer.cs">
+      <DependentUpon>202308122110525_addHAll.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308122150246_paymentAndSeatAdded.cs" />
+    <Compile Include="Migrations\202308122150246_paymentAndSeatAdded.designer.cs">
+      <DependentUpon>202308122150246_paymentAndSeatAdded.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +79,16 @@
     <EmbeddedResource Include="Migrations\202308112030579_InitDB.resx">
       <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308122110525_addHAll.resx">
+      <DependentUpon>202308122110525_addHAll.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308122150246_paymentAndSeatAdded.resx">
+      <DependentUpon>202308122150246_paymentAndSeatAdded.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Repos\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
