--- a/EWT/EWT-UI/Web.config
+++ b/EWT/EWT-UI/Web.config
@@ -34,7 +34,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -46,7 +46,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -74,8 +74,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="EWTContext" 
-			 connectionString="server=DESKTOP-0IO76KC\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;" 
-			 providerName="System.Data.SqlClient" />
+		<add name="EWTContext" connectionString="server=DESKTOP-0IO76KC\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
