--- a/EWT/EWT-BLL/EWT-BLL.csproj
+++ b/EWT/EWT-BLL/EWT-BLL.csproj
@@ -45,8 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\EmployeeDTO.cs" />
+    <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmployeeService.cs" />
+    <Compile Include="Services\Userservice.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EWT-DAL\EWT-DAL.csproj">
@@ -57,6 +59,5 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
