--- a/EWT/EWT-UI/Web.config
+++ b/EWT/EWT-UI/Web.config
@@ -46,7 +46,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -74,8 +74,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="EWTContext" 
-			 connectionString="server=Aorus-Xtrex\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;" 
-			 providerName="System.Data.SqlClient" />
+		<add name="EWTContext" connectionString="DESKTOP-ACVH70P\SQLEXPRESSS; initial catalog=EWTDB; integrated security=true;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
