--- a/EWT/EWT-BLL/EWT-BLL.csproj
+++ b/EWT/EWT-BLL/EWT-BLL.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\AutoMapper.10.0.0\lib\net461\AutoMapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,6 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+
+    <Compile Include="DTOs\HallDTO.cs" />
+    <Compile Include="DTOs\HallSeatDTO.cs" />
+    <Compile Include="DTOs\PaymentDTO.cs" />
+    <Compile Include="DTOs\PayMethodDTO.cs" />
+    <Compile Include="DTOs\SeatDTO.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HallService.cs" />
+    <Compile Include="Services\PaymentServices.cs" />
+
     <Compile Include="DTOs\AdminDTO.cs" />
     <Compile Include="DTOs\EmployeeDTO.cs" />
     <Compile Include="DTOs\MovieDTO.cs" />
@@ -53,6 +64,7 @@
     <Compile Include="Services\EmployeeService.cs" />
     <Compile Include="Services\MovieService.cs" />
     <Compile Include="Services\TicketService.cs" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EWT-DAL\EWT-DAL.csproj">
@@ -60,9 +72,15 @@
       <Name>EWT-DAL</Name>
     </ProjectReference>
   </ItemGroup>
+
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+
+
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
