--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -53,16 +53,42 @@
   <ItemGroup>
     <Compile Include="DataAccesser.cs" />
     <Compile Include="EF\EWTContext.cs" />
+
+    <Compile Include="EF\Models\Hall.cs" />
+    <Compile Include="EF\Models\Payment.cs" />
+    <Compile Include="EF\Models\PayMethod.cs" />
+    <Compile Include="EF\Models\Seat.cs" />
+
     <Compile Include="EF\Models\Admin.cs" />
     <Compile Include="EF\Models\Employee.cs" />
     <Compile Include="EF\Models\Movie.cs" />
     <Compile Include="EF\Models\Ticket.cs" />
+
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.cs" />
     <Compile Include="Migrations\202308112030579_InitDB.designer.cs">
       <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
     </Compile>
+
+    <Compile Include="Migrations\202308122110525_addHAll.cs" />
+    <Compile Include="Migrations\202308122110525_addHAll.designer.cs">
+      <DependentUpon>202308122110525_addHAll.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308122150246_paymentAndSeatAdded.cs" />
+    <Compile Include="Migrations\202308122150246_paymentAndSeatAdded.designer.cs">
+      <DependentUpon>202308122150246_paymentAndSeatAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308130029423_payment_method_added.cs" />
+    <Compile Include="Migrations\202308130029423_payment_method_added.designer.cs">
+      <DependentUpon>202308130029423_payment_method_added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repos\HallRepo.cs" />
+    <Compile Include="Repos\PaymentRepo.cs" />
+    <Compile Include="Repos\Repo.cs" />
+
     <Compile Include="Migrations\202308120806219_InitEmployee.cs" />
     <Compile Include="Migrations\202308120806219_InitEmployee.designer.cs">
       <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
@@ -94,6 +120,7 @@
     <Compile Include="Repos\MovieRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
     <Compile Include="Repos\TicketRepo.cs" />
+
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -103,6 +130,16 @@
     <EmbeddedResource Include="Migrations\202308112030579_InitDB.resx">
       <DependentUpon>202308112030579_InitDB.cs</DependentUpon>
     </EmbeddedResource>
+
+    <EmbeddedResource Include="Migrations\202308122110525_addHAll.resx">
+      <DependentUpon>202308122110525_addHAll.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308122150246_paymentAndSeatAdded.resx">
+      <DependentUpon>202308122150246_paymentAndSeatAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308130029423_payment_method_added.resx">
+      <DependentUpon>202308130029423_payment_method_added.cs</DependentUpon>
+
     <EmbeddedResource Include="Migrations\202308120806219_InitEmployee.resx">
       <DependentUpon>202308120806219_InitEmployee.cs</DependentUpon>
     </EmbeddedResource>
@@ -120,8 +157,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308122041435_MergeNelow.resx">
       <DependentUpon>202308122041435_MergeNelow.cs</DependentUpon>
+
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
