--- a/EWT/EWT-BLL/EWT-BLL.csproj
+++ b/EWT/EWT-BLL/EWT-BLL.csproj
@@ -57,14 +57,20 @@
 
     <Compile Include="DTOs\AdminDTO.cs" />
     <Compile Include="DTOs\EmployeeDTO.cs" />
+    
+    <Compile Include="DTOs\UserDTO.cs" />
+
     <Compile Include="DTOs\MovieDTO.cs" />
     <Compile Include="DTOs\TicketDTO.cs" />
+
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AdminService.cs" />
     <Compile Include="Services\EmployeeService.cs" />
+
+    <Compile Include="Services\Userservice.cs" />
+
     <Compile Include="Services\MovieService.cs" />
     <Compile Include="Services\TicketService.cs" />
-
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EWT-DAL\EWT-DAL.csproj">
@@ -80,7 +86,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-
 
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
