--- a/EWT/EWT-UI/Web.config
+++ b/EWT/EWT-UI/Web.config
@@ -145,9 +145,10 @@
 	</entityFramework>
 	<!--connectionString="server=LAPTOP-2BGORQJ1; initial catalog=EWTDB; integrated security=true;"-->
 	<connectionStrings>
+		<add name="EWTContext" connectionString="DESKTOP-ACVH70P\SQLEXPRESSS; initial catalog=EWTDB; integrated security=true;" providerName="System.Data.SqlClient" />
+
 		<add name="EWTContext"
 			 connectionString="server=Aorus-Xtrex\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;"
 			 providerName="System.Data.SqlClient" />
-
 	</connectionStrings>
 </configuration>
