--- a/EWT/EWT-UI/Web.config
+++ b/EWT/EWT-UI/Web.config
@@ -75,7 +75,8 @@
 	</entityFramework>
 	<!--connectionString="server=LAPTOP-2BGORQJ1; initial catalog=EWTDB; integrated security=true;"-->
 	<connectionStrings>
-		<add name="EWTContext" connectionString="server=Aorus-Xtrex\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;" providerName="System.Data.SqlClient" />
-
+		<add name="EWTContext"
+			 connectionString="server=Aorus-Xtrex\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;"
+			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
