--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Migrations\202308130029423_payment_method_added.designer.cs">
       <DependentUpon>202308130029423_payment_method_added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\HallRepo.cs" />
     <Compile Include="Repos\PaymentRepo.cs" />
@@ -105,10 +106,6 @@
     <Compile Include="Migrations\202308121950396_CreateTableTickets.cs" />
     <Compile Include="Migrations\202308121950396_CreateTableTickets.designer.cs">
       <DependentUpon>202308121950396_CreateTableTickets.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202308122041435_MergeNelow.cs" />
-    <Compile Include="Migrations\202308122041435_MergeNelow.designer.cs">
-      <DependentUpon>202308122041435_MergeNelow.cs</DependentUpon>
     </Compile>
     <Compile Include="Repos\AdminRepo.cs" />
     <Compile Include="Repos\EmployeeRepo.cs" />
@@ -147,9 +144,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308121950396_CreateTableTickets.resx">
       <DependentUpon>202308121950396_CreateTableTickets.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202308122041435_MergeNelow.resx">
-      <DependentUpon>202308122041435_MergeNelow.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
