--- a/EWT/EWT-BLL/EWT-BLL.csproj
+++ b/EWT/EWT-BLL/EWT-BLL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DTOs\SeatDTO.cs" />
     <Compile Include="DTOs\TokenDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AuthService.cs" />
     <Compile Include="Services\HallService.cs" />
     <Compile Include="Services\PaymentServices.cs" />
     <Compile Include="DTOs\AdminDTO.cs" />
