--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\202308130029423_payment_method_added.designer.cs">
       <DependentUpon>202308130029423_payment_method_added.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202308140646363_InitToken.cs" />
+    <Compile Include="Migrations\202308140646363_InitToken.designer.cs">
+      <DependentUpon>202308140646363_InitToken.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\HallRepo.cs" />
@@ -147,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308121950396_CreateTableTickets.resx">
       <DependentUpon>202308121950396_CreateTableTickets.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308140646363_InitToken.resx">
+      <DependentUpon>202308140646363_InitToken.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
