--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="EF\Models\Hall.cs" />
     <Compile Include="EF\Models\Payment.cs" />
     <Compile Include="EF\Models\PayMethod.cs" />
+    <Compile Include="EF\Models\Role.cs" />
     <Compile Include="EF\Models\Seat.cs" />
     <Compile Include="EF\Models\Admin.cs" />
     <Compile Include="EF\Models\Employee.cs" />
@@ -87,6 +88,14 @@
     <Compile Include="Migrations\202308140646363_InitToken.cs" />
     <Compile Include="Migrations\202308140646363_InitToken.designer.cs">
       <DependentUpon>202308140646363_InitToken.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308180554349_AddRolesToUsers.cs" />
+    <Compile Include="Migrations\202308180554349_AddRolesToUsers.designer.cs">
+      <DependentUpon>202308180554349_AddRolesToUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308180602311_AddRoleToEmp.cs" />
+    <Compile Include="Migrations\202308180602311_AddRoleToEmp.designer.cs">
+      <DependentUpon>202308180602311_AddRoleToEmp.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -154,6 +163,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308140646363_InitToken.resx">
       <DependentUpon>202308140646363_InitToken.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308180554349_AddRolesToUsers.resx">
+      <DependentUpon>202308180554349_AddRolesToUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308180602311_AddRoleToEmp.resx">
+      <DependentUpon>202308180602311_AddRoleToEmp.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
