--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -97,6 +97,10 @@
     <Compile Include="Migrations\202308180602311_AddRoleToEmp.designer.cs">
       <DependentUpon>202308180602311_AddRoleToEmp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202308241841376_AddAdminRoleId.cs" />
+    <Compile Include="Migrations\202308241841376_AddAdminRoleId.designer.cs">
+      <DependentUpon>202308241841376_AddAdminRoleId.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\HallRepo.cs" />
@@ -169,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308180602311_AddRoleToEmp.resx">
       <DependentUpon>202308180602311_AddRoleToEmp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308241841376_AddAdminRoleId.resx">
+      <DependentUpon>202308241841376_AddAdminRoleId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
