--- a/EWT/EWT-BLL/EWT-BLL.csproj
+++ b/EWT/EWT-BLL/EWT-BLL.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\BookingDTO.cs" />
     <Compile Include="DTOs\FoodDTO.cs" />
     <Compile Include="DTOs\HallDTO.cs" />
     <Compile Include="DTOs\HallSeatDTO.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="DTOs\TokenDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthService.cs" />
+    <Compile Include="Services\BookingService.cs" />
     <Compile Include="Services\FoodService.cs" />
     <Compile Include="Services\HallseatService.cs" />
     <Compile Include="Services\HallService.cs" />
