--- a/EWT/EWT-UI/EWT-UI.csproj
+++ b/EWT/EWT-UI/EWT-UI.csproj
@@ -142,6 +142,9 @@
     <Compile Include="AuthFilters\EmployeeFilter.cs" />
     <Compile Include="AuthFilters\LoginFilter.cs" />
     <Compile Include="AuthFilters\UserFilter.cs" />
+    <Compile Include="Controllers\BookingController.cs" />
+    <Compile Include="Controllers\FoodController.cs" />
+    <Compile Include="Controllers\FoodOrderController.cs" />
     <Compile Include="Controllers\EmpDashboardController.cs" />
     <Compile Include="Controllers\HallController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
