--- a/EWT/EWT-UI/Web.config
+++ b/EWT/EWT-UI/Web.config
@@ -74,7 +74,11 @@
 		</providers>
 	</entityFramework>
 	<!--connectionString="server=LAPTOP-2BGORQJ1; initial catalog=EWTDB; integrated security=true;"-->
+
 	<connectionStrings>
-		<add name="EWTContext" connectionString="server=LAPTOP-2BGORQJ1; initial catalog=EWTDB; integrated security=true;" providerName="System.Data.SqlClient"/>
+		<add name="EWTContext" connectionString="server=DESKTOP-0IO76KC\SQLEXPRESS; initial catalog=EWTDB; integrated security=true;" providerName="System.Data.SqlClient"/>
+
+
+	
 	</connectionStrings>
 </configuration>
